Start to implement logging + progress updates

--- a/src/Editor_cpp/CMakeLists.txt
+++ b/src/Editor_cpp/CMakeLists.txt
@@ -44,6 +44,8 @@ ADD_EXECUTABLE( osre_ed
     ${editor_module_src}
     ${modules_src}
     ${scripting_src}
+    src/ProgressReporter.cpp
+    src/ProgressReporter.h
     src/OsreEdApp.cpp
     src/OsreEdApp.h
     src/main.cpp
