Disable assimp tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -138,7 +138,8 @@ ADD_SUBDIRECTORY( contrib/zlib )
 ADD_SUBDIRECTORY( contrib/unzip )
 ADD_SUBDIRECTORY( contrib/soil )
 set(ASSIMP_BUILD_ASSIMP_TOOLS OFF CACHE BOOL "no assimp tools")
-set( ASSIMP_BUILD_ZLIB On CACHE BOOL "no assimp tools" )
+set(ASSIMP_BUILD_ZLIB ON CACHE BOOL "no assimp tools" )
+set(ASSIMP_BUILD_TESTS OFF CACHE BOOL "no assimp tools" )
 ADD_SUBDIRECTORY( contrib/assimp )
 ADD_SUBDIRECTORY( contrib/jsoncpp-1.8.4 )
 
