--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -37,5 +37,4 @@ jobs:
       working-directory: ${{runner.workspace}}/bin
       shell: bash
       # Execute tests defined by the CMake configuration.  
-      # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-      run: osre_unittests
+      run: osre_unittest
