--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -38,4 +38,4 @@ jobs:
       shell: bash
       # Execute tests defined by the CMake configuration.  
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-      run: osre_unittests
+      run: osre_unittest
