Separate module updates and render-calls into ModuleRegistry.

--- a/src/Editor_cpp/CMakeLists.txt
+++ b/src/Editor_cpp/CMakeLists.txt
@@ -30,6 +30,8 @@ SET( modules_src
     src/Modules/IModuleView.h
     src/Modules/ModuleBase.cpp
     src/Modules/ModuleBase.h
+    src/Modules/ModuleRegistry.h
+    src/Modules/ModuleRegistry.cpp
 )
 
 SET( gui_src
