Add testcases for EventBus.

--- a/test/UnitTests/CMakeLists.txt
+++ b/test/UnitTests/CMakeLists.txt
@@ -40,6 +40,7 @@ SET ( unittest_common_src
     src/Common/CommonTest.cpp
     src/Common/ObjectTest.cpp
     src/Common/EventTest.cpp
+    src/Common/EventBusTest.cpp
     src/Common/IdsTest.cpp
 )
 
