Refactoring: remove MAth subfolder and use COmmon instead.

--- a/src/Engine/CMakeLists.txt
+++ b/src/Engine/CMakeLists.txt
@@ -78,6 +78,7 @@ SET( common_inc
     ${HEADER_PATH}/Common/Event.h
     ${HEADER_PATH}/Common/EventBus.h
     ${HEADER_PATH}/Common/EventTriggerer.h
+    ${HEADER_PATH}/Common/Frustum.h
     ${HEADER_PATH}/Common/Ids.h
     ${HEADER_PATH}/Common/Logger.h
     ${HEADER_PATH}/Common/Object.h
@@ -89,9 +90,12 @@ SET( common_inc
     ${HEADER_PATH}/Common/Tokenizer.h
     ${HEADER_PATH}/Common/osre_common.h
     ${HEADER_PATH}/Common/glm_common.h
+    ${HEADER_PATH}/Common/BaseMath.h
+    ${HEADER_PATH}/Common/TRay.h
 )
 SET( common_src
     Common/ArgumentParser.cpp
+    Common/BaseMath.cpp
     Common/Common.cpp
     Common/DateTime.cpp
     Common/Event.cpp
@@ -154,17 +158,6 @@ SET( io_inc
     ${HEADER_PATH}/IO/IOService.h
     ${HEADER_PATH}/IO/IOSystemInfo.h
     ${HEADER_PATH}/IO/Uri.h
-)
-
-#==============================================================================
-# Math
-#==============================================================================
-SET( math_src
-    Math/BaseMath.cpp
-)
-SET( math_inc
-    ${HEADER_PATH}/Math/BaseMath.h
-    ${HEADER_PATH}/Math/TRay.h
 )
 
 #==============================================================================
@@ -485,7 +478,6 @@ ADD_LIBRARY( osre SHARED
 	${scripting_mono_inc}
     ${threading_inc}
     ${renderbackend_inc}
-    ${math_inc}
 
     ${app_src}
     ${Common_src}
@@ -493,7 +485,6 @@ ADD_LIBRARY( osre SHARED
     ${debugging_src}
         ${debugging_windows_src}
     ${io_src}
-    ${math_src}
     ${memory_src}
     ${system_src}
         ${system_impl_src}
