--- a/test/UnitTests/CMakeLists.txt
+++ b/test/UnitTests/CMakeLists.txt
@@ -42,6 +42,9 @@ SET ( unittest_common_src
     src/Common/EventTest.cpp
     src/Common/EventBusTest.cpp
     src/Common/IdsTest.cpp
+    src/Common/FrustumTest.cpp
+    src/Common/BaseMathTest.cpp
+    src/Common/TRayTest.cpp
 )
 
 SET ( unittest_collision_src
@@ -53,11 +56,6 @@ SET ( unittest_debugging_src
 
 SET( unittest_io_src 
     src/IO/UriTest.cpp
-)
-
-SET( unittest_math_src
-    src/Math/BaseMathTest.cpp
-    src/Math/TRayTest.cpp
 )
 
 SET( unittest_platform_src
@@ -108,7 +106,6 @@ SOURCE_GROUP( src\\Common                     FILES ${unittest_common_src} )
 SOURCE_GROUP( src\\Collision                  FILES ${unittest_collision_src})
 SOURCE_GROUP( src\\Debugging                  FILES ${unittest_debugging_src})
 SOURCE_GROUP( src\\IO                         FILES ${unittest_io_src} )
-SOURCE_GROUP( src\\Math                       FILES ${unittest_math_src} )
 SOURCE_GROUP( src\\Platform                   FILES ${unittest_platform_src})
 SOURCE_GROUP( src\\Profiling                  FILES ${unittest_profiling_src})
 SOURCE_GROUP( src\\RenderBackend              FILES ${unittest_rb_src} )
