Refactoring start separating classes out of OSRE-Ed

--- a/src/Editor_cpp/CMakeLists.txt
+++ b/src/Editor_cpp/CMakeLists.txt
@@ -44,7 +44,19 @@ SET( scripting_src
     src/Scripting/PythonInterface.h
 )
 
+set(renderview_src
+    src/RenderView/MainRenderView.cpp
+    src/RenderView/MainRenderView.h    
+)
+
+set(actions_src
+    src/Actions/ActionBase.h
+    src/Actions/ImportAction.cpp
+    src/Actions/ImportAction.h
+)
+
 SET (main_src
+    src/SceneData.h
     src/ProgressReporter.cpp
     src/ProgressReporter.h
     src/OsreEdApp.cpp
@@ -52,6 +64,8 @@ SET (main_src
     src/main.cpp
 )
 SOURCE_GROUP(Gui                      FILES ${gui_src})
+SOURCE_GROUP(RenderView               FILES ${renderview_src})
+SOURCE_GROUP(Actions                  FILES ${actions_src})
 SOURCE_GROUP(Modules\\InspectorModule FILES ${inspector_module_src} )
 SOURCE_GROUP(Modules\\LogModule       FILES ${log_module_src} )
 SOURCE_GROUP(Modules\\EditorModule    FILES ${editor_module_src} )
@@ -62,11 +76,13 @@ SOURCE_GROUP(Main\\                   FILES ${main_src})
 
 ADD_EXECUTABLE( osre_ed
     ${gui_src}
+    ${actions_src}
     ${inspector_module_src}
     ${log_module_src}
     ${editor_module_src}
     ${modules_src}
     ${scripting_src}
+    ${renderview_src}
     ${main_src}
 )
 
