--- a/src/Editor_cpp/OSRE_Ed.rc
+++ b/src/Editor_cpp/OSRE_Ed.rc
@@ -52,7 +52,7 @@ END
 
 IDD_LOGVIEW DIALOGEX 0, 0, 1103, 165
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
-CAPTION "Log-Output"
+CAPTION "Output"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     CONTROL         "",IDC_EDIT1,"RichEdit20A",ES_MULTILINE | ES_READONLY | WS_BORDER | WS_TABSTOP,7,7,1089,151
