--- a/src/Player/CMakeLists.txt
+++ b/src/Player/CMakeLists.txt
@@ -8,6 +8,6 @@ ELSE(WIN32)
     SET(platform_libs SDL2)
 ENDIF(WIN32)
 
-target_link_libraries(osre_player osre {$platform_libs})
+target_link_libraries(osre_player osre ${platform_libs})
 
 set_target_properties(osre_player PROPERTIES FOLDER Player)
